@@ -1,7 +1,6 @@
 package org.wycliffeassociates.translationrecorder.Playback.Editing;
 
 import android.app.ProgressDialog;
-import android.util.Pair;
 
 import org.wycliffeassociates.translationrecorder.AudioInfo;
 import com.door43.tools.reporting.Logger;
@@ -13,13 +12,16 @@ import java.nio.ShortBuffer;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.Objects;
 import java.util.Vector;
+
+import kotlin.Pair;
 
 /**
  * Created by sarabiaj on 12/22/2015.
  */
 public class CutOp {
-    private Vector<Pair<Integer, Integer>> mTimeStack = new Vector<>();
+    private Vector<Pair<Integer, Integer>> mTimeStack;
     private Vector<Pair<Integer, Integer>> mFlattenedFrameStack = new Vector<>();
     private Vector<Pair<Integer, Integer>> mUncompressedFrameStack = new Vector<>();
     private Vector<Pair<Integer, Integer>> mCompressedFrameStack = new Vector<>();
@@ -43,7 +45,7 @@ public class CutOp {
             mLock.writeLock();
             Pair<Integer, Integer> temp = new Pair<>(startFrame, endFrame);
             mUncompressedFrameStack.add(temp);
-            mSizeTimeCut = totalFramesRemoved(); //?
+            mSizeTimeCut = totalFramesRemoved();
             Logger.w(this.toString(), "Generating location stacks");
             generateTimeStack();
             generateCutStackCmpLoc();
@@ -53,7 +55,6 @@ public class CutOp {
             mLock.writeUnlock();
         }
     }
-
 
     public void clear() {
         try {
@@ -75,7 +76,7 @@ public class CutOp {
     public void undo() {
         try {
             mLock.readLock();
-            if (mUncompressedFrameStack.size() == 0) {
+            if (mUncompressedFrameStack.isEmpty()) {
                 return;
             }
         } catch (InterruptedException e) {
@@ -101,14 +102,9 @@ public class CutOp {
         int max = -1;
         try {
             mLock.readLock();
-//            for (Pair<Integer, Integer> cut : mFlattenedFrameStack) {
-//                if (frame >= cut.first && frame < cut.second) {
-//                    max = Math.max(cut.second, max);
-//                }
-//            }
             for (int i = 0; i < mFlattenedFrameStack.size(); i++) {
-                if (frame >= mFlattenedFrameStack.get(i).first && frame < mFlattenedFrameStack.get(i).second) {
-                    max = Math.max(mFlattenedFrameStack.get(i).second, max);
+                if (frame >= mFlattenedFrameStack.get(i).getFirst() && frame < mFlattenedFrameStack.get(i).getSecond()) {
+                    max = Math.max(mFlattenedFrameStack.get(i).getSecond(), max);
                 }
             }
         } catch (InterruptedException e) {
@@ -123,8 +119,7 @@ public class CutOp {
     public boolean hasCut() {
         try {
             mLock.readLock();
-            boolean hasCut = mUncompressedFrameStack.size() > 0;
-            return hasCut;
+            return !mUncompressedFrameStack.isEmpty();
         } catch (InterruptedException e) {
             Logger.e(this.toString(), "Error trying to lock for a read in hasCut()", e);
             //TODO: think of better approach... needs to return but shouldn't return invalid info
@@ -138,14 +133,9 @@ public class CutOp {
         int min = Integer.MAX_VALUE;
         try {
             mLock.readLock();
-//            for (Pair<Integer, Integer> cut : mFlattenedFrameStack) {
-//                if (frame > cut.first && frame <= cut.second) {
-//                    min = Math.min(cut.first, min);
-//                }
-//            }
             for (int i = 0; i < mFlattenedFrameStack.size(); i++) {
-                if (frame > mFlattenedFrameStack.get(i).first && frame <= mFlattenedFrameStack.get(i).second) {
-                    min = Math.min(mFlattenedFrameStack.get(i).first, min);
+                if (frame > mFlattenedFrameStack.get(i).getFirst() && frame <= mFlattenedFrameStack.get(i).getSecond()) {
+                    min = Math.min(mFlattenedFrameStack.get(i).getFirst(), min);
                 }
             }
             return min;
@@ -175,14 +165,14 @@ public class CutOp {
         Vector<Pair<Integer, Integer>> copy = new Vector<>(mUncompressedFrameStack.capacity());
         mFlattenedFrameStack = new Vector<>();
         for (Pair<Integer, Integer> p : mUncompressedFrameStack) {
-            copy.add(new Pair<>(p.first, p.second));
+            copy.add(new Pair<>(p.getFirst(), p.getSecond()));
         }
-        Collections.sort(copy, new Comparator<Pair<Integer, Integer>>() {
+        Collections.sort(copy, new Comparator<>() {
             @Override
             public synchronized int compare(Pair<Integer, Integer> lhs, Pair<Integer, Integer> rhs) {
-                if (lhs.first == rhs.first) {
+                if (Objects.equals(lhs.getFirst(), rhs.getFirst())) {
                     return 0;
-                } else if (lhs.first > rhs.first) {
+                } else if (lhs.getFirst() > rhs.getFirst()) {
                     return 1;
                 } else {
                     return -1;
@@ -200,112 +190,32 @@ public class CutOp {
                 copy.remove(p);
                 for (int j = copy.size() - 1; j >= 0; j--) {
                     Pair<Integer, Integer> q = copy.get(j);
-                    if ((q.first >= p.first && q.first <= p.second) || (p.first >= q.first && p.first <= q.second)) {
+                    if ((q.getFirst() >= p.getFirst() && q.getFirst() <= p.getSecond()) || (p.getFirst() >= q.getFirst() && p.getFirst() <= q.getSecond())) {
                         list.add(q);
                         copy.remove(q);
                     }
                 }
             }
-            int start = list.get(0).first;
-            int end = list.get(0).second;
+            int start = list.get(0).getFirst();
+            int end = list.get(0).getSecond();
             for (int i = 1; i < list.size(); i++) {
-                end = (end < list.get(i).second) ? list.get(i).second : end;
+                end = (end < list.get(i).getSecond()) ? list.get(i).getSecond() : end;
             }
-            mFlattenedFrameStack.add(new Pair<Integer, Integer>(start, end));
+            mFlattenedFrameStack.add(new Pair<>(start, end));
             sum += end - start;
         }
         mSizeFrameCutUncmp = sum;
         return sum;
     }
 
-//    /**
-//     * Since the marker position takes into account total data played by audiotrack, the position
-//     * is agnostic of the "actual" position. This method computes the time to add back to it,
-//     * it takes the original time, looks to see if it's greater than or equal to a start cut. If so
-//     * it adds total time cut out, and adds this to time. Time is then compared to the next cut, and
-//     * the process is repeated. Break when the next cut takes place at a later time than we're at.
-//     * <p/>
-//     * mFlattenedFrameStack is a representation of the cut stack WITHOUT any nested cuts, and based on
-//     * the way it is computed, we can assume this list is sorted.
-//     *
-//     * @param frame location that was computed from BufferPlayer before considering cuts
-//     * @return inflated time accounting for cuts
-//     */
-//    public int frameAdjusted(int frame){
-//        mReaders.incrementAndGet();
-//        while(!mWriteRequest.compareAndSet(false,false));
-//        if(mFlattenedFrameStack == null) {
-//            mReaders.decrementAndGet();
-//            return frame;
-//        }
-//        for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-//            if (frame >= p.first) {
-//                frame += p.second - p.first;
-//            } else {
-//                break;
-//            }
-//        }
-//        mReaders.decrementAndGet();
-//        return frame;
-//    }
-//
-//    public int frameAdjusted(int frame, int playbackStart){
-//        mReaders.incrementAndGet();
-//        while(!mWriteRequest.compareAndSet(false,false));
-//        if(mFlattenedFrameStack == null) {
-//            mReaders.decrementAndGet();
-//            return frame;
-//        }
-//        for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-//            if (p.second > playbackStart) {
-//                if (frame >= p.first) {
-//                    frame += p.second - p.first;
-//                } else {
-//                    break;
-//                }
-//            }
-//        }
-//        mReaders.decrementAndGet();
-//        return frame;
-//    }
-//
-//    /**
-//     * Given an absolute time in the uncut waveform, this method
-//     * returns the adjusted time in the cut waveform.  The given
-//     * time must not be in an existing cut.
-//     *
-//     * @param frame a time in ms in the uncut waveform.  timeMs must not
-//     *               be in an existing cut.
-//     * @return the adjusted time in the cut waveform.
-//     */
-//    public synchronized int reverseFrameAdjusted(int frame){
-//        mReaders.incrementAndGet();
-//        while(!mWriteRequest.compareAndSet(false,false));
-//        if (mFlattenedFrameStack == null) {
-//            mReaders.decrementAndGet();
-//            return frame;
-//        }
-//        int adjustedFrame = frame;
-//        for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-//            if (frame >= p.second) {
-//                adjustedFrame -= p.second - p.first;
-//            } else {
-//                break;
-//            }
-//        }
-//        mReaders.decrementAndGet();
-//        return adjustedFrame;
-//    }
-
-
     //NOT THREAD SAFE make sure this function is called under a write lock
     private void generateTimeStack() {
         mSizeTimeCut = 0;
-        mTimeStack = new Vector<Pair<Integer, Integer>>();
+        mTimeStack = new Vector<>();
         for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-            Pair<Integer, Integer> y = new Pair<>(uncompressedFrameToTime(p.first), uncompressedFrameToTime(p.second));
+            Pair<Integer, Integer> y = new Pair<>(uncompressedFrameToTime(p.getFirst()), uncompressedFrameToTime(p.getSecond()));
             mTimeStack.add(y);
-            mSizeTimeCut += y.second - y.first;
+            mSizeTimeCut += y.getSecond() - y.getFirst();
         }
     }
 
@@ -314,31 +224,28 @@ public class CutOp {
         mSizeFrameCutUncmp = 0;
         mUncompressedFrameStack = new Vector<Pair<Integer, Integer>>();
         for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-            Pair<Integer, Integer> y = new Pair<>((p.first), (p.second));
+            Pair<Integer, Integer> y = new Pair<>((p.getFirst()), (p.getSecond()));
             mUncompressedFrameStack.add(y);
-            mSizeFrameCutUncmp += y.second - y.first;
+            mSizeFrameCutUncmp += y.getSecond() - y.getFirst();
         }
     }
 
     //NOT THREAD SAFE make sure this function is called under a write lock
     private void generateCutStackCmpLoc() {
         mSizeFrameCutCmp = 0;
-        mCompressedFrameStack = new Vector<Pair<Integer, Integer>>();
+        mCompressedFrameStack = new Vector<>();
         for (Pair<Integer, Integer> p : mFlattenedFrameStack) {
-            Pair<Integer, Integer> y = new Pair<>(uncompressedToCompressed(p.first), uncompressedToCompressed(p.second));
+            Pair<Integer, Integer> y = new Pair<>(uncompressedToCompressed(p.getFirst()), uncompressedToCompressed(p.getSecond()));
             mCompressedFrameStack.add(y);
-            mSizeFrameCutCmp += y.second - y.first;
+            mSizeFrameCutCmp += y.getSecond() - y.getFirst();
         }
-
     }
 
     public static int timeToUncmpLoc(int timeMs) {
         int seconds = timeMs / 1000;
         int ms = (timeMs - (seconds * 1000));
         int tens = ms / 10;
-        int idx = (AudioInfo.SAMPLERATE * seconds) + (ms * 44) + (tens);
-        //idx *= 2;
-        return idx;
+        return (AudioInfo.SAMPLERATE * seconds) + (ms * 44) + (tens);
     }
 
     public static int timeToCmpLoc(int timeMs) {
@@ -347,7 +254,6 @@ public class CutOp {
         int tens = ms / 10;
         int idx = (AudioInfo.SAMPLERATE * seconds) + (ms * 44) + (tens);
         idx /= 25;
-        //idx *= 2;
         return idx;
     }
 
@@ -364,14 +270,9 @@ public class CutOp {
             int max = -1;
             mLock.readLock();
             Vector<Pair<Integer, Integer>> stack = (compressed) ? mCompressedFrameStack : mFlattenedFrameStack;
-//            for (Pair<Integer, Integer> cut : stack) {
-//                if (frame >= cut.first && frame < cut.second) {
-//                    max = Math.max(cut.second, max);
-//                }
-//            }
             for (int i = 0; i < stack.size(); i++) {
-                if (frame >= stack.get(i).first && frame < stack.get(i).second) {
-                    max = Math.max(stack.get(i).second, max);
+                if (frame >= stack.get(i).getFirst() && frame < stack.get(i).getSecond()) {
+                    max = Math.max(stack.get(i).getSecond(), max);
                 }
             }
             return max;
@@ -390,14 +291,9 @@ public class CutOp {
             if (stack == null) {
                 return frame;
             }
-//            for (Pair<Integer, Integer> cut : stack) {
-//                if (frame >= cut.first) {
-//                    frame += cut.second - cut.first;
-//                }
-//            }
             for (int i = 0; i < stack.size(); i++) {
-                if (frame >= stack.get(i).first) {
-                    frame += stack.get(i).second - stack.get(i).first;
+                if (frame >= stack.get(i).getFirst()) {
+                    frame += stack.get(i).getSecond() - stack.get(i).getFirst();
                 }
             }
             return frame;
@@ -413,16 +309,15 @@ public class CutOp {
         if (hasCut()) {
             try {
                 mLock.readLock();
-                //for (Pair<Integer, Integer> cut : mFlattenedFrameStack) {
                 for (int i = 0; i < mFlattenedFrameStack.size(); i++) {
                     //if the frame is in the middle of a cut
-                    if (frame >= mFlattenedFrameStack.get(i).first && frame <= mFlattenedFrameStack.get(i).second) {
+                    if (frame >= mFlattenedFrameStack.get(i).getFirst() && frame <= mFlattenedFrameStack.get(i).getSecond()) {
                         return true;
                         //if the cut is between the frame and the end of the range
-                    } else if (frame < mFlattenedFrameStack.get(i).first && (frame + range) >= mFlattenedFrameStack.get(i).second) {
+                    } else if (frame < mFlattenedFrameStack.get(i).getFirst() && (frame + range) >= mFlattenedFrameStack.get(i).getSecond()) {
                         return true;
                         //if the frame begins before the first cut, and ends after
-                    } else if (frame < mFlattenedFrameStack.get(i).first && (frame + range) > mFlattenedFrameStack.get(i).first) {
+                    } else if (frame < mFlattenedFrameStack.get(i).getFirst() && (frame + range) > mFlattenedFrameStack.get(i).getFirst()) {
                         return true;
                     }
                 }
@@ -447,8 +342,8 @@ public class CutOp {
                 return loc;
             }
             for (int i = stack.size() - 1; i >= 0; i--) {
-                if (frame >= stack.get(i).second) {
-                    loc -= stack.get(i).second - stack.get(i).first;
+                if (frame >= stack.get(i).getSecond()) {
+                    loc -= stack.get(i).getSecond() - stack.get(i).getFirst();
                 }
             }
         } catch (InterruptedException e) {
@@ -527,7 +422,6 @@ public class CutOp {
                     count--;
                 }
             }
-            return;
         } catch (InterruptedException e) {
             Logger.e(this.toString(), "Error trying to lock for a read in writeCut()", e);
             throw new RuntimeException(e);
@@ -535,6 +429,4 @@ public class CutOp {
             mLock.readUnlock();
         }
     }
-
-
 }
